[package]
name = "tdisk"
version = "0.1.0"
authors = ["TURIING"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.1"
tokio = {version = "1.2", features = ["full"]}
httpdate = "0.3.2"
base64 = "0.13"
rust-crypto = "0.2.36"
structopt = "0.3.11"
serde_yaml = "0.8.17"
serde = {version = "1.0.124", features = ["derive"]}
once_cell = "1.7.2"
indicatif = "0.15.0"
quick-xml = "0.22.0"
bytes = "0.5.3"

